--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@
     </developers>
 
     <scm>
-        <connection>scm:git:ssh://github.com/jenkinsci/icescrum-plugin.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/jenkinsci/icescrum-plugin.git</developerConnection>
+        <connection>scm:git:git://github.com/jenkinsci/icescrum-plugin.git</connection>
+        <developerConnection>scm:git:git://git@github.com/jenkinsci/icescrum-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/icescrum-plugin</url>
     </scm>
 </project>
