[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 
   <artifactId>icescrum</artifactId>
-  <version>1.0.5.3</version>
+  <version>1.0.5.4-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <name>iceScrum plugin</name>
   <description>iceScrum plugin add link to your project tasks in changesets and can send build status to your project on your iceScrum Pro server</description>
@@ -46,7 +46,7 @@
         <connection>scm:git:git://github.com/jenkinsci/icescrum-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/icescrum-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/icescrum-plugin</url>
-        <tag>icescrum-1.0.5.3</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
