add new accessToken auth

--- a/src/main/resources/com/kagilum/plugins/icescrum/IceScrumProjectProperty/config.properties
+++ b/src/main/resources/com/kagilum/plugins/icescrum/IceScrumProjectProperty/config.properties
@@ -1,3 +1,4 @@
-icescrum.url=IceScrum project
+icescrum.url=Project URL
 icescrum.username=Username
 icescrum.password=Password
+icescrum.accessToken=Access Token
