--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <version>2.12</version>
     </parent>
     <artifactId>icescrum</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.1.1</version>
     <name>iceScrum plugin</name>
     <description>iceScrum plugin add link to your project tasks in changesets and can send build status to your project on your iceScrum Pro server</description>
     <packaging>hpi</packaging>
@@ -21,7 +21,7 @@
         <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-        <tag>HEAD</tag>
+        <tag>icescrum-1.1.1</tag>
     </scm>
     <properties>
         <jenkins.version>1.642.3</jenkins.version>  <!-- which version of Jenkins is this plugin built against? -->
